--- a/auctions/templates/auctions/createListing.html
+++ b/auctions/templates/auctions/createListing.html
@@ -2,10 +2,10 @@
 
 {% block body %}
     <h2>Create Listing</h2>
-    <form action="{% url 'createListing' %}" method="POST">
+    <form  action="{% url 'createListing' %}" method="POST">
         {% csrf_token %}
-        {{form}}<br>
+        <div class="form-group">{{form}}<br></div>
             
-        <input type="submit" value="Post Listing">
+        <input type="submit" class="btn-info" value="Post Listing">
     </form>
 {% endblock %}
