--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -3,12 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
     
-    <head style="background-color: black; color: azure;">
+    <head style="background-color: rgb(2, 60, 83); color: azure;">
         <title>{% block title %}Auctions{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
     </head>
-    <body style="background-color: black; color: azure;">
+    <body style="background-color: rgb(2, 60, 83); color: lightcyan;">
         <h1>Auctions</h1>
         <div>
             {% if user.is_authenticated %}
@@ -17,7 +17,8 @@
                 Not signed in.
             {% endif %}
         </div>
-        <ul class="nav">
+        <nav class="navbar navbar-expand-sm bg-info navbar-dark">
+            <ul class=" nav navbar-nav ">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
@@ -30,6 +31,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'createListing' %}">Create Listing</a>
             </li>
+            </ul>
+            <ul class="nav navbar-nav .justify-right-aligned">
             {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
@@ -42,7 +45,8 @@
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
                 </li>
             {% endif %}
-        </ul>
+            </ul>
+        </nav>
         <hr>
         {% block body %}
         {% endblock %}
