--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -13,22 +13,22 @@
 
     {%if not listing%} No Active Listings {%endif%}
     {% for list in listing %}
-    <a href="{%url 'listing' list.id %}"><button class="btn btn-info" style=" text-align: left; width: 100%; padding: 2%; margin-top: 2%;" >
-        <table>
-            <tr>
-                <td><img src="{{list.Image}}" class="img-thumbnail" width="400px"></td>
-                <td style="text-align: left; padding-left: 5%; ">
-                    <div class="listingMenu">
-                        <h2>{{list}}</h2>
-                        <b>Price</b>: ${{list.Price}}
-                        {% if list.Description %} 
-                            <h5><p>{{list.Description}}</p></h5>
-                        {%endif%}
-                        <h6>category: {{list.Category}}</h6>
-                    </div>
-                </td>
-            </tr>
-        </table>
-    </button> </a>
+        <a href="{%url 'listing' list.id %}"><button class="btn btn-info" style=" text-align: left; width: 100%; padding: 2%; margin-top: 2%;" >
+            <table>
+                <tr>
+                    <td width="400px"><img src="{{list.Image}}" class="img-thumbnail" ></td>
+                    <td style="text-align: left; padding-left: 5%;">
+                        <div class="listingMenu">
+                            <h2>{{list}}</h2>
+                            <b>Price</b>: ${{list.Price}}
+                            {% if list.Description %} 
+                                <h5><p>{{list.Description}}</p></h5>
+                            {%endif%}
+                            <h6>category: {{list.Category}}</h6>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </button> </a>
     {%endfor%}
 {% endblock %}
